# RoyalGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/lenses/: biconvex.lens  dgauss.lens  tessar.lens
assets/scenes/: LensFog.glb  LightMaze.glb
cmake/: FetchLibs.cmake
docs/: ARCHITECTURE.md  NEIGHBOR_SELECTION_PLAN.md  RESTIR_BDPT_PLAN.md  make_diagrams.py  make_lens_scene.py  make_matrix.py  make_maze_scene.py  make_neighbor_paper.py  make_paper.py  make_plots.py
shaders/: bdpt_common.glsl  bdpt_eye.comp  bdpt_light.comp  bdpt_lightsel.comp  bdpt_resolve.comp  common.glsl  lens_common.glsl  lens_flare.comp  lens_flare_splat.frag  lens_flare_splat.vert  lens_pupil.comp  light_tree.glsl  pathtrace.comp  restir_camera.comp  restir_caustic.glsl  restir_caustic_merge.comp  restir_caustic_shift.comp  restir_common.glsl  restir_debug.comp  restir_gbuffer.comp  restir_light.comp  restir_lrm.glsl  restir_resolve.comp  restir_shift.glsl  restir_spatial.comp  restir_temporal.comp  restir_wf_cam.glsl  restir_wf_camfinal.comp  restir_wf_caminit.comp  restir_wf_camshade.comp  restir_wf_camshadow.comp  restir_wf_camtrace.comp  restir_wf_common.glsl  restir_wf_dupmap.comp  restir_wf_pfin.comp  restir_wf_psel.comp  restir_wf_shift.glsl  restir_wf_shiftshadow.comp  restir_wf_shiftstep.comp  restir_wf_shifttrace.comp  (+7 more)
src/: CMakeLists.txt  main.cpp
src/bvh/: BVHBuilder.cpp  BVHBuilder.h
src/core/: Application.cpp  Application.h  Log.h  Types.h  Window.cpp  Window.h
src/denoise/: Denoiser.cpp  Denoiser.h
src/gfx/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  FullscreenPass.cpp  FullscreenPass.h  GLCheck.h  GPUTypes.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/io/: ImageExport.cpp  ImageExport.h
src/optics/: Glass.cpp  Glass.h  LensPrescription.cpp  LensPrescription.h  LensSurface.h  LensSystem.cpp  LensSystem.h
src/pathtracer/: LensFlare.cpp  LensFlare.h  LightList.cpp  LightList.h  LightTree.cpp  LightTree.h  PathTracer.cpp  PathTracer.h  RenderSettings.h
src/scene/: Camera.cpp  Camera.h  CameraSettings.h  GLTFLoader.cpp  GLTFLoader.h  Material.h  Mesh.h  Scene.cpp  Scene.h
src/ui/: UILayer.cpp  UILayer.h
